# open-adaptsound

./: .gitignore  LICENSE  PRD.md  README.md  package-lock.json  package.json
docs/: COMPARISON.md  EQUALIZER-APO.md  FAQ.md  index.html  robots.txt  site.css  sitemap.xml
docs/brand/: README.md
samples/: Open-AdaptSound.txt  example-config.txt
src/: audio-engine.js  calculator.js  calculator.test.js  index.html  main.js  settings.js  staircase.js  staircase.test.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
