[package]
name = "open-adaptsound"
version = "1.3.0"
description = "Personal hearing EQ for Windows"
authors = ["Open-AdaptSound"]
edition = "2021"

[lib]
name = "open_adaptsound_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
] }
